test/fail/basic_syntax/function_redeclaration.lily
#[
SyntaxError: f has already been declared.
    from function_redeclaration.lily:6:
]#

define f {} define f {}
